# mailbox.rust

./: .gitignore  Cargo.toml  LICENSE  PUBLISHING.md  README.md  WASM_TESTING.md
examples/: p2p_rpc.rs
scripts/: publish.sh
src/: error.rs  lib.rs  mailbox.rs  message.rs  provider.rs  utils.rs
src/providers/: memory.rs  mod.rs  queue.rs
