[package]
name = "mailbox"
version = "0.1.0"
edition = "2021"
authors = ["MboxLabs Team"]
license = "MIT"
description = "A lightweight, pluggable mailbox/queue kernel inspired by the Erlang Actor Model"
repository = "https://github.com/mboxlabs/mailbox.rust"
homepage = "https://github.com/mboxlabs/mailbox.rust"
documentation = "https://github.com/mboxlabs/mailbox.rust"
keywords = ["mailbox", "actor-model", "message-queue", "async", "erlang"]
categories = ["asynchronous", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "js"] }
async-trait = "0.1"
dashmap = "6"
wasm-bindgen = "0.2"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["sync", "macros"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio-test = "0.4"
